tests/baselines/reference/topLevelAwaitErrors.2(module=esnext).errors.txt
topLevelAwaitErrors.2.ts(4,5): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== topLevelAwaitErrors.2.ts (1 errors) ====
    export {};
    
    // reparse variable name as await should fail
    var await = 1;
        ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    